<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">CourseList</string>
    <string name="app_name">GPA Calculator</string>
    <string name="sl_title">GPA Semester List</string>
    <string name="sc_title">GPA Semester Courses</string>
    <string name="course_title">GPA Course View</string>
    <string name="cancel">DONE/CANCEL</string>
    <string name="save">SAVE</string>
    <string name="name">Course</string>
    <string name="grade">Grade</string>
    <string name="credits">Credits</string>
    <string name="semester">Semester</string>
    <string name="cum">CUM GPA</string>
    <string name="ctotal">Credit Total</string>
    <string name="empty"></string>
    <string name="add">ADD</string>
    <string name="clear">CLEAR</string>
    <string name="gradePrompt">Choose a grade</string>
    <string name="semesterPrompt">Choose a semester</string>
    <string name="courses">All Courses</string>
    <string name="semesters">All Semesters</string>
    <string name="addCourse">Add Course</string>
    <string name="addSemester">Add Semester</string>
    <string name="quickCalc">Quick Calc</string>
    <string name="settings">Settings</string>
    <string name="pointKey">pointTotal</string>
    <string name="clear_text">Are you sure you want to permanently clear all data?</string>
    <string name="menu_delete">DELETE COURSE</string>
    <string name="menu_editview">EDIT/VIEW COURSE</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
